# SnTracer

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
test/: CMakeLists.txt  example_tracing.c  multithread.c  test.c
tracer/: CMakeLists.txt
tracer/include/sntracer/: defines.h  platform.h  sntracer.h
tracer/src/: CMakeLists.txt  sntracer.c
